Saturday, August 16th, 2003   James Turner <james@worldforge.org>

	* Update ProjectBuilder files. Move along, nothing to see
	  here, unless you're on OS-X. If you are, please let me
	  know if these are useful.

Thursday, August 14th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Fixed typos in a #error message in atlasconv.h.
	* Changed atlas/Makefile.am to build the tests with 0.3.
	* 0.3.0 release!

Friday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Changed to using Mersenne Twister for random number
	  generation. Anyone who wants the old interface
	  should #define WFMATH_USE_OLD_RAND.
	* Dropped old, deprecated intersect interface version.
	  This version of the API was used briefly in stage
	  at one point, and that was at least a year ago.

Friday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Forgot to change to 0.3 in wfmath/Makefile.am, fixed that.
	* Got rid of support for old 'list of lists' encoding
	  for AxisBox in atlasconv.h. Also got rid of a bunch
	  of push_back() calls by predeclaring the size of
	  Atlas::Message::Foo::ListType instances.

Friday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Updated version number to 0.3 in preparation for doing
	  a release next week.
	* Got rid of wfmath-config, we won't support it in 0.3.
	* Added instring_test, which tests both IntToString() and IRand().
	* Got rid of operator<() in all classes except for those
	  in timestamp.*. It was only there 'so we could use wfmath
	  classes as keys in std::map'. However, since equality
	  isn't transitive (a == b && b == c does not imply a == c),
	  this has some problems. If you really want a map of spatial
	  objects, you probably want something like stage's OctTree
	  instead.
	* Fixed IRand() to deal with the fact that UINT_MAX is often
	  larger than RAND_MAX.
	* Added a few inline IntToString() cases to make sure short
	  and int get cast to the appropriate (signed or unsigned)
	  version of long.