@@ -5,7 +5,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = wfmath-0.3.pc
 
 EXTRA_DIST = TODO autogen.sh wfmath.m4 \
-	wfmath.pbproj/jmt.pbxuser wfmath.pbproj/project.pbxproj
+	wfmath.pbproj/project.pbxproj
 
 SUBDIRS = wfmath atlas doc
 
